--- a/team/templates/index.html
+++ b/team/templates/index.html
@@ -36,7 +36,7 @@
       <div class="col-3">
       <div class="card">
         <div class="card-header">
-          {{translatelog.user_name}}: {{translatelog.source_lang}} → {{translatelog.target_lang}}
+          {{translatelog.user_name}}<br>{{translatelog.source_lang}} → {{translatelog.target_lang}}
         </div>
         <div class="card-body">
           <h2 class="card-title h5">原文</h2>
