レイアウト修正

--- a/team/templates/index.html
+++ b/team/templates/index.html
@@ -25,7 +25,7 @@
       <div class="row mt-4">
         {% for translatelog in translatelogs %}
         <div class="col-xl-3 col-lg-4 col-sm-6">
-          <div class="card">
+          <div class="card mb-4">
             <div class="card-header">
               {{translatelog.user_name}}<br>{{translatelog.source_lang}} → {{translatelog.target_lang}}
             </div>
